chapter 16 snap shot testing

--- a/UnitTestingByExample.xcodeproj/xcshareddata/xcschemes/UnitTestingByExample.xcscheme
+++ b/UnitTestingByExample.xcodeproj/xcshareddata/xcschemes/UnitTestingByExample.xcscheme
@@ -73,6 +73,13 @@
             ReferencedContainer = "container:UnitTestingByExample.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "FB_REFERENCE_IMAGE_DIR"
+            value = "$(SOURCE_ROOT)/SnapshotImages"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
